tests/baselines/reference/unusedClassesinModule1.errors.txt
tests/cases/compiler/unusedClassesinModule1.ts(2,5): error TS6133: 'Calculator' is declared but its value is never read.


==== tests/cases/compiler/unusedClassesinModule1.ts (1 errors) ====
    module A {
        class Calculator {
        ~~~~~~~~~~~~~~~~
!!! error TS6133: 'Calculator' is declared but its value is never read.
            public handelChar() {
            }
        }
    }